--- a/templates/admin/customers.html
+++ b/templates/admin/customers.html
@@ -1,5 +1,22 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
-    <p>adm customers</p>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone Num</th>
+            <th>Address</th>
+        </tr>
+        {% for entry in customers %}
+        <tr>
+            <td>{{ entry.id }}</td>
+            <td>{{ entry.first_name }}</td>
+            <td>{{ entry.last_name }}</td>
+            <td>{{ entry.phone_num }}</td>
+            <td>{{ entry.address }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock content %}
