--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -27,11 +27,20 @@
         </tr>
         {% for entry in products %}
         <tr>
-            <td> <button id='{{ entry.id }}' onclick='redirectToPage(event)'>Update</button> </td>
+            <!--
+                <td> <button id='{{ entry.id }}' onclick='redirectToPage(event)'>Update</button> </td>
+
+            -->
+            <td> <a href="{{ url_for('admin_product_update', product_id=entry.id) }}"> Update</a> </td>
             <td>{{ entry.id }}</td>
             <td>{{ entry.title }}</td>
             <td>{{ entry.category_id }}</td>
-            <td>{{ entry.category_value }}</td>
+            {% set matching_category = categories | selectattr('id', 'equalto', entry.category_id) | list %}
+            {% if matching_category %}
+                <td>{{ matching_category[0].title }}</td>
+            {% else %}
+                <td>No category found</td>
+            {% endif %}
             <td>{{ entry.price }}</td>
             <td>{{ entry.amount_in_stock }}</td>
         </tr>
