--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <a href="{{url_for('cart_view')}}">Cart</a>
-            <a href="{{url_for('index')}}">Public</a>
+            <a href="{{url_for('index')}}">Catalog</a>
             <a href="{{url_for('admin_index')}}">Admin</a>
         </ul>
     </nav>
