--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,7 @@
             <td> <a href="{{ url_for('add_to_cart', product_id=entry.id, quantity=1) }}"> Add to Cart</a> </td>
             <td>{{ entry.id }}</td>
             <td>{{ entry.title }}</td>
-            {% set matching_category = categories | selectattr('id', 'equalto', entry.category_id) | list %}
-            {% if matching_category %}
-            <td>{{ matching_category[0].title }}</td>
-            {% else %}
-                <td>No category found</td>
-            {% endif %}
+            <td>{{ entry.category}}</td>
             <td>{{ entry.price }}</td>
             <td>{{ entry.amount_in_stock }}</td>
         </tr>
