--- a/templates/admin/orders.html
+++ b/templates/admin/orders.html
@@ -17,19 +17,12 @@
         {% for entry in orders %}
         <tr>
             <td>{{ entry.id }}</td>
-            {% set matching_customers = customers | selectattr('id', 'equalto', entry.customer_id) | list %}
-                {% if matching_customers %}
-                    {% for c in matching_customers %}
-                        <td>{{ c.id }}</td>
-                        <td>{{ c.first_name }}</td>
-                        <td>{{ c.last_name }}</td>
-                        <td>{{ c.phone_num }}</td>
-                        <td>{{ c.address }}</td>
-                    {% endfor %}
-                {% else %}
-                    <td>No customer found</td>
-                {% endif %}
-            <td>{{ entry.status_id }}</td>
+            <td>{{ entry.customer.id }}</td>
+            <td>{{ entry.customer.first_name }}</td>
+            <td>{{ entry.customer.last_name }}</td>
+            <td>{{ entry.customer.phone_num }}</td>
+            <td>{{ entry.customer.address }}</td>
+            <td>{{ entry.status }}</td>
             <td>{{ entry.order_date }}</td>
             <td>{{ entry.total_price }}</td>
             <td>
@@ -40,27 +33,14 @@
                         <th>Price</th>
                         <th>Amount</th>
                     </tr>
-                    {% set matching_order_id = order_items | selectattr('order_id', 'equalto', entry.id) | list %}
-                    {% if matching_order_id %}
-                        {% for match in matching_order_id %}
+                        {% for prod in entry.products %}
                             <tr>
-                                <td>{{ match.product_id }}</td>
-                                {% set matching_prod = products |selectattr('id', 'equalto', match.product_id) | list %}
-                                {% if matching_prod %}
-                                    <td>{{ matching_prod[0].title }}</td>
-                                    <td>{{ match.price }}</td>
-                                    <td>{{ match.amount }}</td>
-                                {% else %}
-                                    <td>No product found</td>
-                                {% endif %}
+                                <td>{{ prod.id }}</td>
+                                <td>{{ prod.title }}</td>
+                                <td>{{ prod.price }}</td>
+                                <td>{{ entry.products[prod] }}</td>
                             </tr>
-                            
-
-                    {% endfor %}
-                    {% else %}
-                        <td>No items found</td>
-                    {% endif %}
-                    
+                        {% endfor %}
                 </table>
             </td>
         </tr>
